Fix: Improve horizontal scroll move

--- a/src/widgets/Header/Header.module.css
+++ b/src/widgets/Header/Header.module.css
@@ -18,7 +18,7 @@
 
 @media (max-width: 768px) {
   .borderBottom {
-    border-bottom: none;
+    border-bottom: 2px solid #000000;
   }
 }
 
